nyuwidgets/nyuparticipants/css/participants.css
/**
 * Licensed to the Sakai Foundation (SF) under one
 * or more contributor license agreements. See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership. The SF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License. You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 */
/* General */


/* Participants list */
.participants_widget #participants_list_container {float:none !important;}
.participants_widget #participants_list_container label {cursor:pointer;}
.participants_widget #participants_list_container .s3d-list-entity-picture {width:46px;height:46px;margin-right: 15px;}
.participants_widget #participants_list_container .participants_list_participant_checkbox {float:left; width: 25px;}
.participants_widget #participants_list_container ul {margin:7px 0; border-top: 1px solid #e9e9e9;}
.participants_widget #participants_list_container ul li {color:#333;padding:10px 10px 10px 6px !important;}
.participants_widget #participants_list_container ul li.s3d-list-item {border-bottom: 1px dotted #e9e9e9;}
.participants_widget #participants_list_container .participants_list_participant_details {font-size:11px;}
.participants_widget #participants_list_container .participants_list_participant_divider {font-size:11px;color:#cccccc;margin:0 5px !important;}
.participants_widget #participants_list_container .participants_list_participant_actions {float: right;}
.participants_widget #participants_list_container .participants_contact_icon{margin-top:5px; margin-left:1px;}
.participants_widget #participants_list_container .participants_message_icon{display: inline-block;height: 16px;width: 16px;background: url("/devwidgets/searchpeople/images/searchpeople_message_icon.png") no-repeat scroll left top transparent;}
.participants_widget #participants_list_container .participants_plus{margin-left: -1px; margin-top: 3px;}
.participants_widget #participants_list_container ul li .participants_message_icon:hover{cursor:pointer;background: url("/devwidgets/searchpeople/images/searchpeople_message_icon_active.png") no-repeat scroll left top transparent;}
.participants_widget #participants_list_container ul li .participants_plus:hover{cursor:pointer;color:#42a2dc;text-decoration:none;}
.participants_selectall{float:left;width:20px;height:20px;margin-left:10px;}
.participants_selectall input{margin-top:4px;}
.participants_widget .s3d-search-container .s3d-search-inputfield {width:200px;}
.participants_widget .fl-hidden {float:none !important;}
.participants_widget #participants_send_selected_message .s3d-actions-message {float:right;margin:2px 0 0 7px;}
.participants_widget .s3d-search-results-grid .s3d-search-result {clear:none !important;}
.participants_widget .s3d-search-results-grid .s3d-search-result input {float:left;}
.participants_widget .s3d-search-results-grid .s3d-search-result .participants_list_participant_checkbox {width:auto !important;}
.participants_widget .s3d-search-results-grid .s3d-search-result .participants_contact_icon {margin-left:15px !important;margin-top:1px !important;}
.participants_widget .s3d-search-results-grid .s3d-search-result .participants_message_icon {float:left;margin-left:15px;margin-top:1px;}
.participants_widget .s3d-search-results-grid .s3d-search-result .participants_group_pic {display:none;}
.participants_widget .s3d-search-results-grid .s3d-search-result .participants_avatar_large {display:inline !important;}
.participants_widget .s3d-search-result .participants_group_pic {display:inline;}
.participants_widget .s3d-search-result .participants_avatar_large {display:none;}
.participants_widget #participants_select_all_container {float:left;height:19px;margin:6px 8px 0 1px;padding:2px 0 0;width:22px;}
.participants_widget #participants_manage_participants{margin-top:0 !important;}

/* Extra Fields */
.participants_widget .participants_list_extra_fields{margin: 20px 0 5px;}
.participants_widget .participants_list_extra_field{width:100%;font-size:11px;line-height:13px;}
.participants_widget .participants_list_extra_field_title{color:#777;display:block;float:left;width:100px;}
.participants_widget .participants_list_extra_field_value{color:#000;margin-left:10px;display:block;padding-left:100px;}
.participants_widget .participants_list_bottom_items_extra{margin-left:30px;}
.participants_widget .s3d-search-results-grid .participants_list_extra_fields {display: none;}

/* spinner when searching */
.participants_widget .s3d-search-inputfield.searching {background:url("/dev/images/ajax-loader-gray.gif") no-repeat scroll right transparent;}

/* tag refine */
.participants_widget button.search_tag_active_item {background-image: url(/dev/images/searchbutton_hover_bg.png) !important; border-color: #AAA}

/* tag cloud */
.participants_widget .tagcloud-container {
	display: none;
}
.participants_widget .tagcloud-row {
	height: 180px;
	width: 730px;
}
.participants_widget .tagcloud-row .search_tag_refine_item.active {
	background-image: url(/dev/images/search_tag_remove.png);
	background-repeat: no-repeat;
	background-position: center right;
	padding-right: 10px;
}
/*.participants_widget.tagcloud-enabled .refine-by-tags-row .s3d-search-refineby-title,
.participants_widget.tagcloud-enabled .refine-by-tags-row .search_tag_refine_item,
.participants_widget.tagcloud-enabled .refine-by-tags-row .s3d-search-refineby .s3d-search-tag.refine {
	display: none;	
}*/
.participants_widget.tagcloud-enabled .s3d-page-header-top-row,
.participants_widget.tagcloud-enabled .s3d-search-refineby-list {
	margin-bottom: 10px;
}
.participants_widget button.filter-by-tags-toggle {
	float: right;
	margin: 4px 20px 0 0;
}
div.jqcloud {
  font-family: "Helvetica", "Arial", sans-serif;
  color: #09f;
  overflow: hidden;
  position: relative;
}
div.jqcloud a {
  color: inherit;
  font-size: inherit;
  text-decoration: none;
}
div.jqcloud a:hover {
  color: #0df;
}
div.jqcloud a:hover {
  color: #0cf;
}
div.jqcloud span {
  padding: 0;
}
div.jqcloud span.w10 {
  font-size: 28px;
  color: #0cf;
}
div.jqcloud span.w9 {
  font-size: 26px;
  color: #0cf;
}
div.jqcloud span.w8 {
  font-size: 24px;
  color: #0cf;
}
div.jqcloud span.w7 {
  font-size: 22px;
  color: #39d;
}
div.jqcloud span.w6 {
  font-size: 20px;
  color: #90c5f0;
}
div.jqcloud span.w5 {
  font-size: 18px;
  color: #90a0dd;
}
div.jqcloud span.w4 {
  font-size: 16px;
  color: #90c5f0;
}
div.jqcloud span.w3 {
  font-size: 14px;
  color: #a0ddff;
}
div.jqcloud span.w2 {
  font-size: 12px;
  color: #99ccee;
}
div.jqcloud span.w1 {
  font-size: 10px;
  color: #aab5f0;
}
div.jqcloud { line-height: normal }

